Fixed CSS issue where text-only logos at the top would be the wrong color

--- a/resources/assets/less/overrides.less
+++ b/resources/assets/less/overrides.less
@@ -14,6 +14,7 @@
 .skin-green-dark
 .skin-contrast
 .main-header
+
 .logo {
   background-color: inherit;
 }
@@ -23,7 +24,9 @@
   text-align: left;
   display: block;
   clear: both;
-  //text-overflow: hidden;
+  &a:link, a:hover, a:visited   {
+    color: #fff
+  }
 }
 .huge {
   font-size: 40px;
